added js folder, added placerholder js for IE

--- a/registration-forgottern-username.html
+++ b/registration-forgottern-username.html
@@ -9,6 +9,8 @@
     <title>Registration forgotton username</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
     
+    <script src="http://athena.bl.uk:33815/master-html/britishlibrary/resources/global/scripts2/jquery.1.9.1.min.js"></script> 
+    
     </head>
 	<body class="masthead-compress registration">
 		<div id="page-outer" class="clearfix">
