--- a/registration-home-login.html
+++ b/registration-home-login.html
@@ -9,6 +9,8 @@
     <title>Registration Home Login</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
     
+    <script src="http://athena.bl.uk:33815/master-html/britishlibrary/resources/global/scripts2/jquery.1.9.1.min.js"></script> 
+    
     </head>
 
 	<body class="masthead-compress registration">
